# kairo_2d

./: .gitignore  README.md  format  mypy.ini  pyproject.toml
kairo/: __init__.py  conftest.py  main.py
kairo/_tests/: __init__.py
kairo/circuit/: __init__.py  circuit.py  connector.py  diagram.kra  power.py  transistor.py  wire.py
kairo/circuit/_tests/: test_circuit.py
kairo/engine/: __init__.py  entity.py  event_queue.py  game.py  geometry.py  inputs.py  player.py
kairo/engine/_tests/: test_player.py
kairo/engine/components/: animator.py  collider.py  mover.py
kairo/map/: interactive_map.py  loader.py  tile.py  tilemap.py
kairo/map/_tests/: test_tile.py  test_tilemap.py
kairo/resources/: __init__.py
kairo/resources/imgs/: my_tileset.kra  tileset-zeldalike-32px.kra
kairo/resources/maps/: level01.map
mapeditor/: __main__.py  button.py  editor.py  pyproject.toml  window.py
