[tool.poetry]
name = "kairo"
version = "0.1.0"
description = "A pygame prototype for teaching Eletronics Circuits"
authors = ["Diogo Junior <diogo.junior@grad.ufsc.br>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
mypy = "^0.812"
isort = "^5.8.0"
pytest = "^6.2.4"
pylint = "^2.8.3"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
