[tool.poetry]
name = "mapeditor"
version = "0.1.0"
description = ""
authors = ["Diogo Junior <diogo.junior@grad.ufsc.br>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.0"
PyQt6 = "^6.2.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
mypy = "^0.812"
isort = "^5.8.0"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
